2011-05-21  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the message for dead process on basic
	authentication.
	(twittering-verify-credentials): make the message for dead process
	on basic authentication similar as that on OAuth/xAuth
	authentication.

2011-05-16  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Ensure that a sentinel is invoked when a
	process is started successfully.
	(twittering-process-alive-p): new function.
	(twittering-start-process-with-sentinel): new function.
	(twittering-send-http-request-native): ensure that the given
	sentinel is invoked when the process is started successfully.
	(twittering-send-http-request-curl): replace `start-process' with
	`twittering-start-process-with-sentinel' in order to ensure that
	the sentinel is invoked.
	(twittering-send-http-request-wget): likewise.

	* twittering-mode.el: Confirm that the process is alive on waiting
	for its sentinel.
	(twittering-oauth-get-token-alist): check whether the process is
	alive on waiting for the invocation of the sentinel for the
	process.
	(twittering-tinyurl-get): likewise.
	(twittering-verify-credentials): likewise.
	(twittering-get-list-sync): use `twittering-process-alive-p'.

	* twittering-mode.el: Ignore errors on `xml-parse-region'.
	(twittering-xml-parse-region): return nil if an error happens on
	`xml-parse-region'.

	* twittering-mode.el: Fix uri property of a list name in a
	tweet. Thanks to Naohiro Aota who reported the problem.
	(twittering-get-list-url): new function.
	(twittering-make-fontified-tweet-text): correctly generate uri
	property for a list name in a tweet.

2011-05-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* test/test-twittering-mode.el: Fix and add tests of proxy
	configuration. Now they do not depend on environment variables.

2011-05-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Replace the symbol `us-ascii' for a
	coding-system with `iso-safe', which is valid even on Emacs21.