@@ -17,6 +17,7 @@
   のハッシュタグを自動で追加するよう変更されています。
 
 ### バグ修正
+* 認証成功・失敗についてのメッセージが表示されるよう修正
 
  2.0.0: 2011-04-22
 ------------------
